package models.entities.hechos;

public class Multimedia {
    private String urlImagen;
    private String extension;
}
